{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 23,
  "lineage": "28a7a831-57dd-7210-b64f-f5ed57ff1d2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "flask_app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:internet-gateway/igw-092ff5252262032c1",
            "id": "igw-092ff5252262032c1",
            "owner_id": "855619710027",
            "vpc_id": "vpc-0b355c6217eb4ebe4"
          },
          "dependencies": [
            "aws_vpc.flask_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "flask_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:855619710027:loadbalancer/app/flask-app-alb/fe143651f40c6385",
            "arn_suffix": "app/flask-app-alb/fe143651f40c6385",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "flask-app-alb-1900960058.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:855619710027:loadbalancer/app/flask-app-alb/fe143651f40c6385",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "flask-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-020ff7ea5ec1d2ff6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-092a4e7ef4e06346d"
              },
              {
                "subnet_id": "subnet-0b6417782b90bac92"
              }
            ],
            "subnets": [
              "subnet-092a4e7ef4e06346d",
              "subnet-0b6417782b90bac92"
            ],
            "vpc_id": "vpc-0b355c6217eb4ebe4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.flask_app_sg",
            "aws_subnet.flask_app_subnet_a",
            "aws_subnet.flask_app_subnet_b",
            "aws_vpc.flask_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "flask_app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:855619710027:listener/app/flask-app-alb/fe143651f40c6385/8051dde94bd7c887",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:855619710027:targetgroup/flask-app-tg/5a9d7ae6ffd09f14",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:855619710027:listener/app/flask-app-alb/fe143651f40c6385/8051dde94bd7c887",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:855619710027:loadbalancer/app/flask-app-alb/fe143651f40c6385",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.flask_app_alb",
            "aws_lb_target_group.flask_app_target_group",
            "aws_security_group.flask_app_sg",
            "aws_subnet.flask_app_subnet_a",
            "aws_subnet.flask_app_subnet_b",
            "aws_vpc.flask_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "flask_app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:855619710027:targetgroup/flask-app-tg/5a9d7ae6ffd09f14",
            "arn_suffix": "targetgroup/flask-app-tg/5a9d7ae6ffd09f14",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:855619710027:targetgroup/flask-app-tg/5a9d7ae6ffd09f14",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "flask-app-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b355c6217eb4ebe4"
          },
          "dependencies": [
            "aws_vpc.flask_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:security-group/sg-020ff7ea5ec1d2ff6",
            "description": "Allow HTTP access to Flask app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020ff7ea5ec1d2ff6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "flask-app-sg",
            "name_prefix": "",
            "owner_id": "855619710027",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b355c6217eb4ebe4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.flask_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "flask_app_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:subnet/subnet-092a4e7ef4e06346d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092a4e7ef4e06346d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855619710027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b355c6217eb4ebe4"
          },
          "dependencies": [
            "aws_vpc.flask_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "flask_app_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:subnet/subnet-0b6417782b90bac92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6417782b90bac92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "855619710027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0b355c6217eb4ebe4"
          },
          "dependencies": [
            "aws_vpc.flask_app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "flask_app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:855619710027:vpc/vpc-0b355c6217eb4ebe4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0152a12c7271deeb4",
            "default_route_table_id": "rtb-0560c326ee1d0f3bd",
            "default_security_group_id": "sg-06bbc073268b740e0",
            "dhcp_options_id": "dopt-08a36b309353d1ac8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b355c6217eb4ebe4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0560c326ee1d0f3bd",
            "owner_id": "855619710027"
          }
        }
      ]
    }
  ]
}